fix y and g cutoff

--- a/amp_conf/htdocs/admin/assets/less/freepbx/moduleadmin.less
+++ b/amp_conf/htdocs/admin/assets/less/freepbx/moduleadmin.less
@@ -106,6 +106,7 @@
 		position: absolute;
 		margin-top: 3px;
 		width: 205px;
+		height: 20px;
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
@@ -113,6 +114,7 @@
 	.moduleversion {
 		position:absolute;
 		left: 280px;
+		height: 20px;
 		margin-top: 3px;
 	}
 	.moduletrack {
